--- a/ios-telemed/Base.lproj/Main.storyboard
+++ b/ios-telemed/Base.lproj/Main.storyboard
@@ -275,18 +275,18 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CUg-Jw-FhI" id="GKG-S6-mpZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TYw-oz-KzC">
-                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="15" y="4" width="34" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="clip" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aZA-Xk-UiV">
-                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <rect key="frame" x="15" y="25" width="44" height="15"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
@@ -436,7 +436,7 @@
                                     <action selector="datePicker:" destination="Ype-rM-poy" eventType="valueChanged" id="8Kk-eF-m0Q"/>
                                 </connections>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adatok mentése HealthKitbe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBK-jk-uvL">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Adatok mentése HealthKitbe" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBK-jk-uvL">
                                 <rect key="frame" x="0.0" y="359" width="375" height="39"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -446,15 +446,15 @@
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="b4k-gB-8g2">
                                 <rect key="frame" x="310" y="363" width="51" height="31"/>
                             </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beállítás új referenciaértékként" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8B-Bm-weN" userLabel="Beállítás új referenciaértékként">
-                                <rect key="frame" x="0.0" y="408" width="375" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Beállítás új referenciaértékként" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8B-Bm-weN" userLabel="Beállítás új referenciaértékként">
+                                <rect key="frame" x="0.0" y="399" width="375" height="40"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="pgJ-l0-xyG">
-                                <rect key="frame" x="310" y="430" width="51" height="31"/>
+                                <rect key="frame" x="310" y="404" width="51" height="31"/>
                             </switch>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -463,15 +463,16 @@
                             <constraint firstItem="pgJ-l0-xyG" firstAttribute="leading" secondItem="b4k-gB-8g2" secondAttribute="leading" id="5rF-Gn-DVb"/>
                             <constraint firstItem="W9w-Th-Ez1" firstAttribute="leading" secondItem="S0R-7f-uei" secondAttribute="leading" id="6tO-h0-QJM"/>
                             <constraint firstItem="S0R-7f-uei" firstAttribute="centerY" secondItem="0eh-56-Pb7" secondAttribute="centerY" id="CAZ-gs-twx"/>
-                            <constraint firstItem="j8B-Bm-weN" firstAttribute="top" secondItem="tBK-jk-uvL" secondAttribute="bottom" constant="10" id="E34-vr-b1I"/>
                             <constraint firstItem="Geb-Kh-uzd" firstAttribute="leading" secondItem="W9w-Th-Ez1" secondAttribute="leading" id="F8O-iB-138"/>
                             <constraint firstItem="S0R-7f-uei" firstAttribute="top" secondItem="0Ch-tM-FPG" secondAttribute="bottom" constant="8" symbolic="YES" id="GYx-y4-2Rq"/>
                             <constraint firstItem="Geb-Kh-uzd" firstAttribute="trailing" secondItem="W9w-Th-Ez1" secondAttribute="trailing" id="J1O-YB-aME"/>
+                            <constraint firstItem="j8B-Bm-weN" firstAttribute="centerY" secondItem="pgJ-l0-xyG" secondAttribute="centerY" id="Kgf-az-nFl"/>
                             <constraint firstItem="S0R-7f-uei" firstAttribute="baseline" secondItem="HRK-cy-gYx" secondAttribute="baseline" id="LNi-nV-PFt"/>
                             <constraint firstItem="W9w-Th-Ez1" firstAttribute="trailing" secondItem="HRK-cy-gYx" secondAttribute="trailing" id="NX1-N2-3y7"/>
                             <constraint firstAttribute="trailing" secondItem="0Ch-tM-FPG" secondAttribute="trailing" id="OVy-Pv-v6s"/>
                             <constraint firstItem="tBK-jk-uvL" firstAttribute="centerY" secondItem="b4k-gB-8g2" secondAttribute="centerY" id="VBj-W4-T2u"/>
-                            <constraint firstItem="j8B-Bm-weN" firstAttribute="trailing" secondItem="tBK-jk-uvL" secondAttribute="trailing" id="YiG-zh-hjS"/>
+                            <constraint firstItem="j8B-Bm-weN" firstAttribute="leading" secondItem="tBK-jk-uvL" secondAttribute="leading" id="Vb6-e6-BEJ"/>
+                            <constraint firstItem="j8B-Bm-weN" firstAttribute="trailing" secondItem="tBK-jk-uvL" secondAttribute="trailing" id="VdG-MN-jnP"/>
                             <constraint firstItem="W9w-Th-Ez1" firstAttribute="centerX" secondItem="0Ch-tM-FPG" secondAttribute="centerX" id="ZkX-VD-uY3"/>
                             <constraint firstItem="tBK-jk-uvL" firstAttribute="top" secondItem="S0R-7f-uei" secondAttribute="bottom" constant="8" symbolic="YES" id="aVX-MY-j0m"/>
                             <constraint firstItem="b4k-gB-8g2" firstAttribute="trailing" secondItem="HRK-cy-gYx" secondAttribute="trailing" id="dJa-96-X2X"/>
@@ -480,15 +481,15 @@
                             <constraint firstItem="0Ch-tM-FPG" firstAttribute="leading" secondItem="fyl-Ou-qeq" secondAttribute="leading" id="lL7-AT-tss"/>
                             <constraint firstItem="0eh-56-Pb7" firstAttribute="leading" secondItem="S0R-7f-uei" secondAttribute="trailing" constant="8" symbolic="YES" id="lMT-bO-MPR"/>
                             <constraint firstItem="qVh-Mq-FpG" firstAttribute="top" secondItem="S0R-7f-uei" secondAttribute="bottom" constant="267" id="lgh-Dk-RzL"/>
+                            <constraint firstItem="j8B-Bm-weN" firstAttribute="top" secondItem="tBK-jk-uvL" secondAttribute="bottom" constant="1" id="ncG-3y-tpk"/>
                             <constraint firstItem="0Ch-tM-FPG" firstAttribute="centerX" secondItem="0eh-56-Pb7" secondAttribute="centerX" id="oF2-MQ-Zmv"/>
                             <constraint firstItem="S0R-7f-uei" firstAttribute="bottom" secondItem="HRK-cy-gYx" secondAttribute="bottom" id="qzk-c9-Q81"/>
                             <constraint firstItem="tBK-jk-uvL" firstAttribute="leading" secondItem="0Ch-tM-FPG" secondAttribute="leading" id="rcU-a3-xzQ"/>
                             <constraint firstItem="Geb-Kh-uzd" firstAttribute="top" secondItem="uBl-wj-7RR" secondAttribute="bottom" constant="8" symbolic="YES" id="rxk-5z-EOU"/>
                             <constraint firstItem="0Ch-tM-FPG" firstAttribute="top" secondItem="W9w-Th-Ez1" secondAttribute="bottom" constant="8" symbolic="YES" id="tYc-PJ-2pA"/>
-                            <constraint firstItem="pgJ-l0-xyG" firstAttribute="top" secondItem="b4k-gB-8g2" secondAttribute="bottom" constant="36" id="tx2-ri-kj4"/>
+                            <constraint firstItem="pgJ-l0-xyG" firstAttribute="top" secondItem="b4k-gB-8g2" secondAttribute="bottom" constant="10" id="tx2-ri-kj4"/>
                             <constraint firstItem="Geb-Kh-uzd" firstAttribute="leading" secondItem="fyl-Ou-qeq" secondAttribute="leadingMargin" id="usC-7Q-0w8"/>
                             <constraint firstItem="HRK-cy-gYx" firstAttribute="leading" secondItem="0eh-56-Pb7" secondAttribute="trailing" constant="8" symbolic="YES" id="wIa-x9-ABT"/>
-                            <constraint firstItem="j8B-Bm-weN" firstAttribute="leading" secondItem="tBK-jk-uvL" secondAttribute="leading" id="yMO-ph-yHg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Új bejegyzés" id="AiY-lM-4qL">
@@ -514,7 +515,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CsH-Ho-uWS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1079" y="2226"/>
+            <point key="canvasLocation" x="-1079.2" y="2225.9370314842581"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="W9T-hG-JNA">
